# dt-inc

./: .gitattributes  README.md  ir_sensor_model.blend  labo.blend  main  test.blend  test_US.blend  test_US.blend1  test_US_2.blend  test_US_2.blend1  test_track.blend  vehicule_2.blend
car_constraints/: car_constraints_v1.blend  car_constraints_v2.blend
car_physics/: main  test_track.blend  vehicule_2.blend
final_car/: car_simul.py  define_angle_when_object_detected.py  final_car.blend  line_follower_v1.blend  main.py  ultrasonic_avoidance.py
ir_sensor/: ir_sensor_model_v1.blend  ir_sensor_model_v1.blend1  ir_sensor_model_v2.blend  ir_sensor_model_v2.blend1
line_follower/: car_simul.py  ir_sensor.py  line_follower_test.py  line_follower_v1.blend
parcours/: car_simul.py  line_follower.py  main.py  parcours_cylinder_obstacle.blend  parcours_prism_obstacle.blend  parcours_stop.blend  parcours_stop.blend1  parcours_straight.blend  parcours_tight_circle.blend  parcours_tight_curve.blend  parcours_tight_curve.blend1  parcours_wide_circle.blend  parcours_wide_curve.blend  parcours_wide_curve_double.blend  ultrasonic_avoidance.py  (+1 more)
science/: 50.csv  60.csv  80.csv  ASP_analysis.py  car_data_visualizer.py  define_angle_when_object_detected.py  live_filter.py  pyproject.toml  speed_fitting.py  turning_characterization.py
science/car/: car.py  main.py
science/car/code/: car.py
science/car_data/: 100.csv  30.csv  3m_01.csv  3m_02.csv  40.csv  70.csv  90.csv  circle.csv  ir_data_black_color.csv  ir_data_red_color.csv  ir_data_white_color.csv  ir_data_yellow_color.csv
(+394 files in other folders)
